compiler/compiler/tests/language/negative/oopSurfaceRoleCapability/module/importNonExportedSymbol.qn
module app.badImport

import http.core.privateModel.{PrivateRouteCarrier}

pub usePrivateCarrier(value: PrivateRouteCarrier) -> i64 {
  return value.value
}
